fix: footer on screen entirely on mobile

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -75,6 +75,7 @@ footer {
     padding-top: 1rem;
     margin-bottom: 2rem;
     text-align: center;
+    font-size: 1rem;
     color: rgba(0,0,0,0.8);
     @media(prefers-color-scheme: dark) {color: rgba(243,243,243,0.8);}
 }
